# digest-engine

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  BUILD  IMPLEMENTATION.md  INTEGRATIONS.md  LICENSE  README.md  SESSION.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  conftest.py  docker-compose.yml  fix_script.py  generate_icon.py  justfile  manage.py  package-lock.json  package.json  pants.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  stylelint.config.mjs  turbo.json
.copilot-tmp/: core_test_tasks_head_prefix.py
.github/: copilot-instructions.md
.github/instructions/: backend-python.instructions.md  dev-server-workflow.instructions.md  documentation.instructions.md  frontend-app.instructions.md  frontend-component-structure.instructions.md
.github/workflows/: build-release.yml  lint.yml  test.yml
content/: __init__.py  admin.py  api.py  api_urls.py  apps.py  models.py  ninja_api.py  serializers.py  signals.py
content/migrations/: 0001_initial.py  0002_content_newsletter_promotion.py  0003_content_pipeline_state.py  0004_content_summary_text.py  __init__.py
content/tests/: test_admin.py  test_api.py  test_ninja_api.py  test_signals.py
core/: BUILD  admin.py  api.py  api_urls.py  auth_views.py  cron.py  deduplication.py  embeddings.py  entity_extraction.py  jwt.py  llm.py  models.py  newsletter_extraction.py  newsletters.py  ninja_api.py  permissions.py  pipeline.py  serializer_mixins.py  serializers.py  settings_types.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
core/management/: __init__.py
core/migrations/: 0001_initial.py  0002_newsletter_intake.py  0002_sourceconfig.py  0003_content_embeddings.py  0005_content_canonical_url_content_duplicate_of_and_more.py  0006_entitycandidate_entitymention.py  0007_entityauthoritysnapshot_content_authority_adjusted_score.py  0008_projectconfig_recompute_topic_centroid_on_feedback_save.py  0009_topiccentroidsnapshot.py  0010_move_project_models_to_projects.py  0011_move_entity_models_to_entities.py  0012_move_content_models_to_content_and_ingestion.py  0013_move_newsletter_models_to_newsletters.py  0014_move_pipeline_models_to_pipeline.py  0015_move_topic_centroid_snapshot_to_trends.py
core/plugins/: __init__.py  base.py  bluesky.py  mastodon.py  reddit.py  registry.py  rss.py
core/tests/: BUILD  test_admin.py  test_api.py  test_auth_views.py  test_bluesky.py  test_bootstrap_live_sources.py  test_cron.py  test_embeddings.py  test_entrypoints.py  test_health.py  test_invitations.py  test_llm.py  test_mastodon.py  test_membership.py  test_newsletters.py  test_permissions.py  test_pipeline.py  test_plugin_base.py  test_reddit.py  test_rss.py  test_serializers.py  test_tasks.py  test_utils.py
deploy/argocd/: digest-engine-staging-application.yaml  newsletter-maker-staging-application.yaml
deploy/grafana/: operational-maturity-dashboard.json
digest_engine/: __init__.py  asgi.py  celery.py  ninja_api.py  taskiq.py  telemetry.py  urls.py  wsgi.py
digest_engine/settings/: __init__.py  admin.py  ai.py  base.py  celery.py  logging.py  swagger.py  taskiq.py
docker/nginx/: default.conf
docker/web/: Dockerfile  entrypoint.sh
docs/: FILES.md  NOTES.md  OLLAMA.md  PLANNING.md  README.md
docs/admin-guide/: backups-and-retention.md  configuration.md  overview.md  troubleshooting.md  users-and-access.md
docs/developer-guide/: architecture.md  backend-conventions.md  deployment.md  local-development.md  overview.md
docs/reference/: algorithms.md  api.md  glossary.md  logging-and-observability.md  pipeline.md  skills.md  tunables.md
docs/user-guide/: entities-and-authority.md  getting-started-saas.md  getting-started-selfhost.md  newsletter-intake.md  projects-and-content.md
entities/: __init__.py  admin.py  api.py  api_urls.py  apps.py  extraction.py  models.py  ninja_api.py  serializers.py  tasks.py
entities/migrations/: 0001_initial.py  0002_alter_entitycandidate_first_seen_in_and_more.py  0003_entitycandidate_auto_promotion_blocked_reason_and_more.py  __init__.py  (+1 more)
entities/tests/: test_admin.py  (+4 more)
frontend/: .env.example  .prettierignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
ingestion/: __init__.py  admin.py  api.py  api_urls.py  apps.py  models.py  ninja_api.py  serializers.py  tasks.py
marketing/: GDPR.md  HOME_PAGE_COPY.md  PLANNING.md  next.config.mjs  next.config.ts  package-lock.json  package.json  sitemap.config.js  tsconfig.json
messaging/: __init__.py  admin.py  api.py  api_urls.py  apps.py  consumers.py  models.py  ninja_api.py  realtime.py  routing.py  serializers.py  signals.py
newsletter_maker/: asgi.py  celery.py  settings.py  telemetry.py  urls.py  wsgi.py
newsletters/: __init__.py  admin.py  api.py  api_urls.py  apps.py  composition.py  extraction.py  intake.py  models.py  ninja_api.py  serializers.py  signals.py  tasks.py  views.py
notifications/: __init__.py  admin.py  api.py  api_urls.py  apps.py  consumers.py  emit.py  models.py  ninja_api.py  realtime.py  routing.py  serializers.py  signals.py
pipeline/: __init__.py  admin.py  api.py  api_urls.py  apps.py  models.py  ninja_api.py  resilience.py  serializers.py
projects/: __init__.py  admin.py  api.py  api_urls.py  linkedin_oauth.py  model_support.py  models.py  ninja_api.py  ninja_api_pattern_test.py  ninja_credentials_api.py  ninja_helpers.py  ninja_invitations_api.py  ninja_memberships_api.py  ninja_project_configs_api.py  ninja_source_configs_api.py  serializers.py
scripts/: bootstrap_dev.sh  disaster_recovery_rehearsal.sh  ensure_turbo_link.sh
skills/: BUILD
tests/: __init__.py
trends/: __init__.py  admin.py  api.py  api_urls.py  apps.py  metrics.py  models.py  ninja_api.py  observability.py  serializers.py  tasks.py
users/: __init__.py  admin.py  api.py  api_urls.py  apps.py  auth_views.py  forms.py  managers.py  models.py  ninja_api.py  serializers.py  tasks.py
(+835 files in other folders)
