[project]
name = "digest-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"asgiref==3.11.1",
	"atproto==0.0.67",
	"autobahn==25.12.2",
	"automat==25.4.16",
	"boto3==1.43.24",
	"botocore==1.43.24",
	"cbor2==6.1.2",
	"cfgv==3.5.0",
	"channels==4.3.2",
	"channels-redis==4.3.0",
	"constantly==23.10.4",
	"coverage==7.14.1",
	"cryptography==46.0.7",
	"cssbeautifier==1.15.4",
	"daphne==4.2.2",
	"Deprecated==1.3.1",
	"dj-database-url==3.1.2",
	"django-allauth==65.18.0",
	"django-anymail==15.0",
	"django-cors-headers==4.9.0",
	"django-import-export==4.4.1",
	"django-storages==1.14.6",
	"django-stubs-ext==6.0.5",
	"django-stubs==6.0.5",
	"django-types==0.24.0",
	"django-unfold==0.97.0",
	"Django==6.0.6",
	"djlint==1.39.0",
	"dnspython==2.8.0",
	"docutils==0.23",
	"editorconfig==0.17.1",
	"feedparser==6.0.12",
	"gunicorn==26.0.0",
	"httpx==0.28.1",
	"hyperlink==21.0.0",
	"identify==2.6.19",
	"incremental==24.11.0",
	"inflection==0.5.1",
	"jmespath==1.1.0",
	"jsbeautifier==1.15.4",
	"langchain-core==1.4.1",
	"langchain-protocol==0.0.16",
	"langgraph-checkpoint==4.1.1",
	"langgraph-prebuilt==1.1.0",
	"langgraph-sdk==0.4.2",
	"langgraph==1.2.4",
	"langsmith==0.8.9",
	"libipld==3.4.1",
	"librt==0.11.0",
	"markdown==3.10.2",
	"Mastodon.py==2.2.1",
	"msgpack==1.1.2",
	"nodeenv==1.10.0",
	"opentelemetry-api>=1.42.1",
	"opentelemetry-exporter-otlp-proto-http>=1.42.1,<2",
	"opentelemetry-instrumentation-django>=0.63b1,<1",
	"opentelemetry-sdk>=1.42.1",
	"ormsgpack==1.12.2",
	"pillow==12.2.0",
	"praw==7.8.2",
	"pre-commit==4.6.0",
	"psycopg[binary]==3.3.4",
	"py-ubjson==0.16.1",
	"pyasn1-modules==0.4.2",
	"pyasn1==0.6.3",
	"PyJWT==2.13.0",
	"pylint-django==2.7.0",
	"pylint-plugin-utils==0.9.0",
	"pyopenssl==26.2.0",
	"pyright==1.1.410",
	"pytest-django==4.12.0",
	"pytest-mock==3.15.1",
	"pytest==9.0.3",
	"python-dotenv==1.2.2",
	"qdrant-client==1.18.0",
	"requests-toolbelt==1.0.0",
	"ruff==0.15.16",
	"s3transfer==0.18.0",
	"sentence-transformers==5.5.1",
	"service-identity==26.1.0",
	"standardwebhooks==1.0.1",
	"structlog==26.1.0",
	"svix==1.95.2",
	"taskiq==0.12.4",
	"taskiq-aio-pika==0.6.0",
	"taskiq-redis==1.2.2",
	"twisted==26.4.0",
	"txaio==25.12.2",
	"types-Deprecated==1.3.1.20260520",
	"types-psycopg2==2.9.21.20260518",
	"types-python-dateutil==2.9.0.20260518",
	"types-pyyaml==6.0.12.20260518",
	"types-requests==2.33.0.20260518",
	"ujson==5.12.1",
	"uritemplate==4.2.0",
	"uuid-utils==0.16.0",
	"watchdog==6.0.0",
	"websockets==15.0.1",
	"wrapt==2.2.1",
	"xxhash==3.7.0",
	"zope-interface==8.5",
	"django-ninja>=1.6.2",
]

[dependency-groups]
dev = [
	"black==26.5.1",
	"pytokens==0.4.1",
]

[tool.uv]
package = false

[tool.isort]
# Mode 3 = Vertical Hanging Indent (matches your example)
multi_line_output = 3
# Forces a wrap as soon as you have more than X imports (set to 2 or 1)
force_grid_wrap = 2
# Modern standards (matches 'Black' formatter style)
include_trailing_comma = true
use_parentheses = true

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["*/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["content", "core", "digest_engine", "entities", "ingestion", "messaging", "newsletters", "notifications", "pipeline", "projects", "trends", "users"]

[tool.djlint]
profile = "django"
indent = 4
max_line_length = 120

[tool.django-stubs]
django_settings_module = "digest_engine.settings"

[tool.coverage.run]
branch = true
relative_files = true
source = ["content", "core", "digest_engine", "entities", "ingestion", "messaging", "newsletters", "notifications", "pipeline", "projects", "trends", "users"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
omit = ["*/tests/*", "*/migrations/*"]
